--- a/package.json
+++ b/package.json
@@ -21,12 +21,15 @@
   },
   "devDependencies": {
     "@ember/optional-features": "^2.0.0",
-    "@glimmer/component": "^1.0.2",
-    "@glimmer/tracking": "^1.0.2",
+    "@glimmer/component": "^1.1.1",
+    "@glimmer/tracking": "^1.1.1",
+    "acorn": "^8.7.0",
     "babel-eslint": "^10.1.0",
+    "bootstrap": "^5.0.0",
     "broccoli-asset-rev": "^3.0.0",
-    "ember-auto-import": "^1.6.0",
-    "ember-cli": "~3.22.0",
+    "ember-auto-import": "^2.4.1",
+    "ember-bootstrap": "^5.1.0",
+    "ember-cli": "^3.28.5",
     "ember-cli-app-version": "^4.0.0",
     "ember-cli-babel": "^7.22.1",
     "ember-cli-dependency-checker": "^3.2.0",
@@ -39,22 +42,31 @@
     "ember-fetch": "^8.0.2",
     "ember-load-initializers": "^2.1.1",
     "ember-maybe-import-regenerator": "^0.1.6",
+    "ember-power-select": "^5.0.4",
     "ember-qunit": "^4.6.0",
     "ember-resolver": "^8.0.2",
+    "ember-set-helper": "^2.0.1",
     "ember-source": "~3.22.0",
     "ember-template-lint": "^2.14.0",
+    "ember-truth-helpers": "^3.0.0",
     "ember-welcome-page": "^4.0.0",
     "eslint": "^7.11.0",
     "eslint-plugin-ember": "^9.3.0",
     "eslint-plugin-node": "^11.1.0",
     "loader.js": "^4.7.0",
+    "musicxml-interfaces": "^0.0.20",
     "npm-run-all": "^4.1.5",
-    "qunit-dom": "^1.5.0"
+    "qunit-dom": "^1.5.0",
+    "webpack": "^5.72.0"
   },
   "engines": {
     "node": "10.* || >= 12"
   },
   "ember": {
     "edition": "octane"
+  },
+  "dependencies": {
+    "musicjson": "^0.2.1",
+    "node-polyfill-webpack-plugin": "^1.1.4"
   }
 }
