--- a/package.json
+++ b/package.json
@@ -56,8 +56,7 @@
     "loader.js": "^4.7.0",
     "musicxml-interfaces": "^0.0.20",
     "npm-run-all": "^4.1.5",
-    "qunit-dom": "^1.5.0",
-    "webpack": "^5.72.0"
+    "qunit-dom": "^1.5.0"
   },
   "engines": {
     "node": "10.* || >= 12"
@@ -67,6 +66,7 @@
   },
   "dependencies": {
     "musicjson": "^0.2.1",
-    "node-polyfill-webpack-plugin": "^1.1.4"
+    "node-polyfill-webpack-plugin": "^1.1.4",
+    "webpack": "^5.72.1"
   }
 }
